--- a/server/package.json
+++ b/server/package.json
@@ -4,16 +4,28 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-  "server": "nodemon index.js",
-  "client": "npm start --prefix ../minha-app",
-  "dev": "concurrently \"npm run server\" \"npm run client\""
+    "server": "nodemon index.js",
+    "client": "npm start --prefix ../minha-app",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^4.19.2"
+    "axios": "^1.7.2",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "express-session": "^1.18.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.4.1",
+    "nodemailer": "^6.9.13",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "concurrently": "^8.2.2",
