--- a/server/package.json
+++ b/server/package.json
@@ -25,7 +25,8 @@
     "mongoose": "^8.4.1",
     "nodemailer": "^6.9.13",
     "passport": "^0.7.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "stripe": "^15.9.0"
   },
   "devDependencies": {
     "concurrently": "^8.2.2",
