--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,7 @@
     "react-helmet-async": "^2.0.5",
     "react-i18next": "^14.1.2",
     "react-router-dom": "^6.23.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
